--- a/EasyHomeFrameworkDemo/AndroidManifest.xml
+++ b/EasyHomeFrameworkDemo/AndroidManifest.xml
@@ -4,11 +4,27 @@
     android:versionName="1.0">
 
     <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="15" />
-
+	<uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS"/>
+	
     <application android:label="@string/app_name"
         android:icon="@drawable/ic_launcher"
         android:theme="@style/AppTheme">
-
+		<activity android:name=".MainActivity">
+		    
+		    <intent-filter>
+		        <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+		    </intent-filter>
+		    
+		</activity>
+		
+		<activity android:name=".AudioEffectDemo">
+		    
+		</activity>
+		
+		<activity android:name=".ModuleTestDemo">
+		    
+		</activity>
+		
     </application>
-
 </manifest>
